# QuantumTimeSandwich

./: .gitignore  .proto  Cargo.toml  LICENSE  PROOF_STRATEGY.md  README.md  coverage.sh  log  setup_pqs_kex_server.sh
QuantumTimeSandwich/: Cargo.toml  QuantumTimeSandwich-3333919-10649949261129494780_0.profraw  README.md  qiskit-vscode-log.out
QuantumTimeSandwich-iterators/: Cargo.toml  QuantumTimeSandwich-3333948-15927319419320103019_0.profraw
QuantumTimeSandwich-iterators/benches/: matmul_bench.rs
QuantumTimeSandwich-iterators/src/: lib.rs  utils.rs
QuantumTimeSandwich-iterators/src/iterators/: qubit_iterators.rs
QuantumTimeSandwich-macros/: Cargo.toml  QuantumTimeSandwich-3333983-7310976205020847707_0.profraw
QuantumTimeSandwich-macros/src/: lib.rs
QuantumTimeSandwich/benches/: state_bench.rs
QuantumTimeSandwich/examples/: bell_inequalities.rs  cswap.rs  dense_coding.rs  deutch.rs  grovers.rs  inverse_example.rs  macro_example.rs  optimizer_example.rs  simple.rs
QuantumTimeSandwich/grpc/: Cargo.toml  README.md  build.rs  clean.sh  csr.conf  netstat  newserver.csr  newserver.key  newserver.pem
QuantumTimeSandwich/grpc/client/: client.rs
QuantumTimeSandwich/grpc/proto/: quantum_encryption_service.proto
QuantumTimeSandwich/grpc/server/: server.rs
QuantumTimeSandwich/grpc/src/: main.rs
QuantumTimeSandwich/src/: builder.rs  builder_traits.rs  lib.rs  utils.rs
QuantumTimeSandwich/src/boolean_circuits/: arithmetic.rs
QuantumTimeSandwich/src/grpc/oqs_kex_rpc/: mod.rs  server.rs
QuantumTimeSandwich/src/grpc/oqs_kex_rpc/utils/: mod.rs
QuantumTimeSandwich/src/state_ops/: matrix_ops.rs  measurement_ops.rs
bb84/: Cargo.toml  QuantumTimeSandwich-3333986-17865539553835508997_0.profraw
bb84/benches/: results.md  state_bench.rs
bb84/examples/: basis_selection_demo.rs  bb84_aes_integration.rs  bb84_simulation.rs  eavesdropping_demo.rs  lattice_crypto_demo.rs  lwe-demo.rs  main.rs  noise_simulation.rs  ring-lwe-demo.rs
bb84/src/: attacks.rs  bb84.rs  bb84_module.rs  bb84_protocol.rs  bb84_states.rs  error_correction.rs  lib.rs  privacy_amplification.rs  tests.rs
doc/: Cryptonique.md  DecentralizedQuantum.tex  UCSM.md  bb84_tests.md  examples.md  todo.md
lean/: README.md  SpectralGap.lean  lake-manifest.json  lakefile.lean
lean/SpectralGap/: Asymptotics.lean  Basic.lean  CycleGraph.lean  FourierBasis.lean  ProductGraph.lean  SpectralGapDef.lean  SymplecticForm.lean  Torus.lean  ZModDistance.lean
quantum-engine-sim/: Cargo.toml  README.md  XANADU_BRIEF.md
quantum-engine-sim/examples/: enhanced_physics.rs
quantum-engine-sim/src/: cnt_bridge.rs  cnt_physics.rs  coherence.rs  covariant.rs  engine.rs  gui.rs  lib.rs  lindblad.rs  logit_drift.rs  main.rs  noise.rs  sim_worker.rs  spectral.rs  toric_code.rs  torus.rs  units.rs  vacuum.rs  wilson_comparison.rs
quantum-engine-sim/verus-proofs/: Makefile  README.md  coherence.rs  distance.rs  engine.rs  spectral_gap.rs  thermal.rs
tests/: lib.rs
tonnetz-coherence-sim/: Cargo.toml  README.md
tonnetz-coherence-sim/examples/: scaling_experiment.rs  topology_comparison.rs  torus_validation.rs
tonnetz-coherence-sim/src/: coherence.rs  lib.rs  noise.rs  simulation.rs  topology.rs  torus.rs
toric-code-sim/: Cargo.toml  README.md
toric-code-sim/examples/: anyon_braiding.rs  scaling_analysis.rs
toric-code-sim/presentation/: toric-code.html
toric-code-sim/src/: anyon.rs  braiding.rs  lattice.rs  lib.rs  simulation.rs  syndrome.rs
toric-doppler-sim/: Cargo.toml
toric-doppler-sim/src/: bridge.rs  gl_renderer.rs  gui.rs  main.rs  physics.rs  worker.rs
unit_circle_state_machine/: Cargo.toml  QuantumTimeSandwich-3334017-18307283018591359571_0.profraw
unit_circle_state_machine/benches/: ucsm_benchmarks.rs
unit_circle_state_machine/src/: lib.rs  mod.rs  operation.rs  protocol.rs  tests.rs  unit_circle_state_machine.rs  unit_circle_states.rs
