[package]
name = "QuantumTimeSandwich-iterators"
version = "1.4.0"
authors = ["Paraxiom <sylvain@paraxiom.org>"]
description = "Iterators for tensor product matrix multiplication"
repository = "https://github.com/Paraxiom/QuantumTimeSandwich"
license = "MIT"
edition = "2021"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "QuantumTimeSandwich_iterators"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
num-traits = "^0.2"
rayon = { version = "^1.7", optional = true }

[dev-dependencies]
num-complex = "^0.4"
cblas-sys = "^0.1"
openblas-src = { version = "^0.10", features = ["cblas"] }
sprs = "^0.11"
faer-core = "^0.9"

[dev-dependencies.ndarray]
version = "^0.17"
features = ["blas"]
