[package]
name = "QuantumTimeSandwich-macros"
version = "1.0.0"
authors = ["Sylvain Cormier <sylvain@paraxiom.org>"]
description = "A procedural macro for QuantumTimeSandwich"
repository = "https://github.com/Paraxiom/QuantumTimeSandwich"
license = "MIT"
edition = "2021"

[lib]
name = "QuantumTimeSandwich_macros"
proc-macro = true