[package]
name = "bb84"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5" }

# On the left: What your code uses. 
# Inside the braces: The actual name and path of the folder.
QuantumTimeSandwich = { package = "QuantumTimeSandwich", path = "../QuantumTimeSandwich" }

aes = "0.8.4"
aes-gcm = "0.10.3"
block-modes = "0.9.1"
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10.9"
ring = "0.17.14"
