[package]
name = "quantum-engine-sim"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unified quantum engine simulation: toroidal spectral gaps, coherence protection, analog gravity, and vacuum energy extraction on T²"
repository = "https://github.com/Paraxiom/QuantumTimeSandwich"
authors = ["Sylvain Cormier <sylvain@paraxiom.org>"]
keywords = ["quantum", "torus", "casimir", "coherence", "topological"]
categories = ["science", "simulation"]
default-run = "quantum-engine-sim"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[dependencies]
rand = "0.8"
nalgebra = "0.33"
eframe = { version = "0.31", default-features = false, features = ["wgpu", "default_fonts"] }
egui_plot = "0.31"
crossbeam-channel = "0.5"
toric-code-sim = { path = "../toric-code-sim" }
tonnetz-coherence-sim = { path = "../tonnetz-coherence-sim" }
topological-coherence = { path = "../../topological-coherence" }
