[package]
name = "toric-code-sim"
version = "0.1.0"
edition = "2021"
authors = ["Paraxiom <sylvain@paraxiom.org>"]
description = "Kitaev toric code simulator — Pauli frame tracking of anyonic excitations and braiding on T²"

[dependencies]
rand = "0.8"

[dev-dependencies]
topological-coherence = "0.1.2"

[[example]]
name = "anyon_braiding"
path = "examples/anyon_braiding.rs"
