[package]
name = "quantum_time_sandwich_grpc"
version = "0.1.0"
edition = "2021"
[dependencies]
tonic = "0.10.2"  
prost = "0.12.3" 
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"  


oqs = "0.9.0"  
[build-dependencies]
tonic-build = "0.10.2"   
[[bin]]
name = "quantum_time_sandwich_server"
path = "src/main.rs"

[[bin]]
name = "quantum_time_sandwich_client"
path = "client/client.rs"
